[project]
name = "dsc-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dash>=3.1.1",
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "js>=1.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
